--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         .container { background: white; border-radius: 20px; padding: 40px; max-width: 500px; width: 100%; box-shadow: 0 20px 60px rgba(0,0,0,0.3); }
         .success { color: #2E7D32; }
         .blocked { color: #C62828; }
-        .coupon { font-size: 48px; font-weight: bold; color: #D32F2F; margin: 20px 0; font-family: 'Courier New', monospace; background: #f5f5f5; padding: 15px; border-radius: 10px; border: 2px dashed #D32F2F; }
+        .coupon { font-size: 48px; font-weight: bold; color: #2E7D32; margin: 20px 0; font-family: 'Courier New', monospace; background: #E8F5E9; padding: 15px; border-radius: 10px; border: 2px dashed #4CAF50; }
         .info { background: #E3F2FD; padding: 15px; border-radius: 10px; margin: 20px 0; font-size: 14px; }
+        .info.blocked-info { background: #FFEBEE; }
         .countdown { font-size: 24px; font-weight: bold; color: #E65100; margin: 20px 0; }
         .loading { text-align: center; padding: 40px; }
         .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #667eea; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 0 auto 20px; }
@@ -60,7 +61,7 @@
             <h1 class="blocked">⛔ Already Claimed</h1>
             <h3 id="blockedAdName"></h3>
             
-            <div class="info" style="background: #FFEBEE;">
+               <div class="info blocked-info">
                 <p>You've already claimed <strong>this ad</strong> today.</p>
                 <p><strong>Location:</strong> <span id="blockedLocation"></span></p>
                 <p><strong>Time:</strong> <span id="blockedTime"></span></p>
