--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body.success-bg {
 
 /* Blocked/Already claimed background (red gradient) */
 body.blocked-bg {
-    background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);
+    background: linear-gradient(135deg, #f00000 0%, #dc281e 100%);
 }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial; }
        body { min-height: 100vh; display: flex; justify-content: center; align-items: center; padding: 20px; transition: background 0.5s ease; }
@@ -415,4 +415,5 @@ if (performance.navigation.type === 1) { // Type 1 = page reload
         }
     </script>
 </body>
+
 </html>
