--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         </div>
         
         <!-- Success -->
-        <div id="success" class="hidden">
+      <div id="success" class="hidden">
             <h1 class="success">✅ Coupon Claimed!</h1>
-            <h2 id="adName"></h2>
-            <p><strong>Product:</strong> <span id="productName"></span></p>
-            <p><strong>Location:</strong> <span id="hostName"></span></p>
+            <h2 align="center" id="adName"></h2>
+            <p align="center"><strong>Product:</strong> <span id="productName"></span></p>
+            <p align="center"><strong>Location:</strong> <span id="hostName"></span></p>
             
             <div class="coupon-section">
                 <div class="coupon" id="couponCode"></div>
@@ -648,3 +648,4 @@
     </script>
 </body>
 </html>
+
